style: fix grid alignment and projects responsiveness

--- a/src/css/variables.css
+++ b/src/css/variables.css
@@ -12,7 +12,7 @@
 
   /* Font and typography */
   --body-font: "Poppins", sans-serif;
-  --bigger-font-size: 2rem;
+  --bigger-font-size: 2.2rem;
   --h1-font-size: 1.5rem;
   --h2-font-size: 1.25rem;
   --h3-font-size: 1rem;
